- division by zero crash fixed in server (2014/02/03 Colin Tuckley)
- added danish translation (2013/07/29 Joe Dalton)
- updated a number of levelsets from OFT (2013/03/20 MS)
- use $docdir for document path in configure (2012/08/15 MS)
- added a bunch of new levelsets, removed OldGames (2012/08/15 MS)

2.6.4:
- fixed crash caused by long config path (2012/06/19 Kees Cook)
- fixed gettext related compile error (2012/06/19 Colin Tuckley)
- added another bunch of levelsets from Olaf Friedrich (2012/01/22 MS)
- added bunch of new levelsets (2011/06/10 MS)

2.6.3:
- fixed compiler warnings (2011/03/08 MS)
- fixed bug in loading levelsets formated in DOS (2011/03/07 MS)
- added comfortable levelset selection (2011/03/07 MS)
- fixed compile issue with libpng-1.5 (2011/03/02 Thomas Klausner)
- improved french localisation (2011/03/02 stormi)

2.6.2:
- added some new levelsets and updates (2010/10/05 MS)
- do not consider grown bricks for warp limit (2010/10/05 MS)
- fixed possible highscore loss on write error (2010/10/05 MS)
- fixed broken compilation with audio disabled (2010/10/04 Petr Pisar)

2.6.1:
- fixed missing font transparency in help screen (24/12/09 MS)
- fixed bug in menus's level set list that prevented first few entries
  to show up (24/12/09 MS)
- fixed odd sound sample rates (all are 22050 now) (24/12/09 AM)
- fixed english translation issues (23/12/09 CT)

2.6:
- added XDG desktop file (09/10/26 PT)
- fixed compiling on Fedora (09/10/26 SG)
- fixed GNU_SOURCE warning (09/10/26 MS)
- added new levelsets (09/10/26 MS)
- added hidden config option badspeech to disable swearing by default
  (09/10/26 MS)
- improved french translation (08/08/24 K.C.)
- drop group rights on startup (linux only) to improve security (access
  to highscore) (08/03/29 HG)
- bugfix: update levelset tooltip when changing selection with left/right
arrows (08/03/29 HG)
- added improved spec file for building RPMs (07/10/10 SG)
- configure now works for win32 (07/01/20 DY)

2.6beta-7: